# AlphaAC

./: .env  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: accelerator-smoke.yml  ci.yml  docs.yml  greedy-rl-agent.yml  kaggle_scheduler.yml
configs/experiments/: alphazero_rank2.yaml  alphazero_rank2_heavy.yaml  alphazero_rank2_heavy_potential.yaml  benchmark_rank2.yaml  greedy_rl.yaml  ppo_rank2.yaml  smoke.yaml  supervised_large.yaml  supervised_pretrain.yaml  supervised_rel48_100m.yaml  supervised_rel48_14m.yaml  supervised_rel48_2m.yaml  supervised_rel48_pretrain.yaml  supervised_rel48_pretrain_mlp.yaml
data/: README.md
data/candidates/: standard.json
data/examples/: standard_rank_1.json  standard_rank_2.json  standard_rank_3.json
data/schema/: presentation.schema.json
docs/: action_spaces.md  alphazero.md  architectures.md  benchmarking.md  certificates.md  environment.md  hardware.md  mathematics.md  reproducibility.md
notebooks/kaggle/: 01_generate_dataset.ipynb  02_annotate_dataset.ipynb  02_train.ipynb  03_train.ipynb  README.md  kernel-metadata.json  scheduler_runner.ipynb
notebooks/kaggle/scheduler_state_repo/: README.md  queue.yaml  scheduler_state.json
scripts/: bootstrap.py  kaggle_scheduler.py  plot_training_metrics.py  reproduce_benchmarks.sh  reproduce_smoke.sh  test_greedy_rl_agent.sh  update_kaggle_runtime_secrets.py  verify_all_certificates.sh
src/ac_zero/: __init__.py  cli.py
src/ac_zero/agents/: base.py  greedy.py  ppo.py  random_agent.py
src/ac_zero/algebra/: presentation.py  word.py
src/ac_zero/benchmarks/: __init__.py  catalog.py  commands.py  config.py  evaluation.py  results.py
src/ac_zero/certificates/: certificate.py  verifier.py
src/ac_zero/configuration/: models.py
src/ac_zero/datasets/: annotate.py  ball.py  ball_columns.py  ball_store.py  candidates.py  columnar.py  descent.py  digest_index.py  expand.py  generator.py  graph.py  groups.py  grow.py  hub.py  instance_store.py  io.py  json_stream.py  labels.py  publish.py  remote_paths.py  split.py  summary.py  supervised_store.py  update.py  validation.py
tests/integration/: test_cli_dataset_upload.py  test_cli_greedy_pipeline.py  test_cli_smoke.py
tests/unit/: test_algebra.py  test_autograd.py  test_ball_columns.py  test_benchmark_catalog.py  test_benchmark_evaluation.py  test_benchmark_results.py  test_bidirectional.py  test_breadth_first.py  test_candidates.py  test_checkpoint_bundle.py  test_checkpoint_name.py  test_cli_dataset_paths.py  test_columnar.py  test_console_verbosity.py  test_dataset_annotate.py  test_dataset_ball.py  test_dataset_descent.py  test_dataset_generation.py  test_dataset_graph.py  test_dataset_groups.py  test_dataset_grow.py  test_dataset_hub.py  test_dataset_io.py  test_dataset_publish.py  test_dataset_remote_paths.py  test_dataset_split.py  test_dataset_summary.py  test_dataset_update.py  test_descent_search.py  test_digest_index.py  test_environment_gym.py  test_greedy.py  test_hub_checkpoints.py  test_instance_source.py  test_instance_store.py  test_iterative_deepening.py  test_json_stream.py  test_kaggle_notebooks.py  test_labels.py  test_logging.py  (+35 more)
(+87 files in other folders)
